--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -94,6 +94,9 @@ body{
                 span{margin: 0 5px;color: #e4e4e4}
                 a:hover{color: #ff6700;}
             }
+            .free{
+                margin-top: 10px;
+            }
             .other{
                 border: none;
                 border-top: 1px solid #e0e0e0;
