--- a/src/css/cart.scss
+++ b/src/css/cart.scss
@@ -117,6 +117,7 @@ main{
                 border-bottom: 1px solid #e7e7e7;
                 display: flex;
                 align-items: center;
+                a{text-decoration: none;}
                 .icons{
                     display: inline-block;
                     background-image: url(https://shop.io.mi-img.com/static/h5/static3/media/yp-icons.2bf57ccf.png);
@@ -163,7 +164,7 @@ main{
                         height: 32px;
                         width: 134px;
                         border: 1px solid #b3b3b3;
-                        margin-left: 80px;
+                        margin-left: 100px;
                         margin-top: 20px;
                         .icons{
                             display: inline-block;
@@ -195,7 +196,7 @@ main{
                 .cart-price{
                     width: 120px;
                     height: 72px;
-                    margin-left: 65px;
+                    margin-left: 85px;
                     span{
                         text-align: center;
                         line-height: 72px;
@@ -259,22 +260,13 @@ main{
                     width: 200px;
                     height: 80px;
                     .tol{
-                        line-height: 50px;
+                        line-height: 80px;
                         margin-top: 10px;
-                        b{
-                            font-weight: 500;
-                            font-size: 20px;
-                        }
                         span{
                             color: #c00000;
                             font-size: 20px;
+                            line-height: 50px;
                         }
-                    }
-                    .p{
-                        font-size: 12px;
-                        color: #999;
-                        line-height: 15px;
-                        display: block;
                     }
                 }
                 div{
